// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTreeView.ts should load children when expanding 1`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should load children when expanding 2`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
    <div class="v-treeview-node__children">
      <div class="v-treeview-node v-treeview-node--leaf">
        <div class="v-treeview-node__root">
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Child
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should load children when selecting, but not render 1`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <i aria-hidden="true"
         class="v-icon v-treeview-node__checkbox v-icon--link material-icons theme--light"
         style="font-size: 28px;"
      >
        check_box_outline_blank
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should load children when selecting, but not render 2`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node v-treeview-node--selected">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <i aria-hidden="true"
         class="v-icon v-treeview-node__checkbox v-icon--link material-icons theme--light accent--text"
         style="font-size: 28px;"
      >
        check_box
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should not show expand icon when children is empty 1`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node v-treeview-node--leaf">
    <div class="v-treeview-node__root">
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should open all children when using open-all prop 1`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
    <div class="v-treeview-node__children">
      <div class="v-treeview-node">
        <div class="v-treeview-node__root">
          <i aria-hidden="true"
             class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
             style="font-size: 28px;"
          >
            arrow_drop_down
          </i>
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Child
            </div>
          </div>
        </div>
        <div class="v-treeview-node__children">
          <div class="v-treeview-node v-treeview-node--leaf">
            <div class="v-treeview-node__root">
              <div class="v-treeview-node__content">
                <div class="v-treeview-node__label">
                  Grandchild
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-treeview-node v-treeview-node--leaf">
        <div class="v-treeview-node__root">
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Child
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should react to open changes 1`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
    <div class="v-treeview-node__children">
      <div class="v-treeview-node">
        <div class="v-treeview-node__root">
          <i aria-hidden="true"
             class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
             style="font-size: 28px;"
          >
            arrow_drop_down
          </i>
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Child
            </div>
          </div>
        </div>
        <div class="v-treeview-node__children">
          <div class="v-treeview-node v-treeview-node--leaf">
            <div class="v-treeview-node__root">
              <div class="v-treeview-node__content">
                <div class="v-treeview-node__label">
                  Grandchild
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-treeview-node v-treeview-node--leaf">
        <div class="v-treeview-node__root">
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Child
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should react to open changes 2`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
    <div class="v-treeview-node__children">
      <div class="v-treeview-node">
        <div class="v-treeview-node__root">
          <i aria-hidden="true"
             class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light"
             style="font-size: 28px;"
          >
            arrow_drop_down
          </i>
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Child
            </div>
          </div>
        </div>
      </div>
      <div class="v-treeview-node v-treeview-node--leaf">
        <div class="v-treeview-node__root">
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Child
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should react to open changes 3`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
    <div class="v-treeview-node__children">
      <div class="v-treeview-node">
        <div class="v-treeview-node__root">
          <i aria-hidden="true"
             class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
             style="font-size: 28px;"
          >
            arrow_drop_down
          </i>
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Child
            </div>
          </div>
        </div>
        <div class="v-treeview-node__children">
          <div class="v-treeview-node v-treeview-node--leaf">
            <div class="v-treeview-node__root">
              <div class="v-treeview-node__content">
                <div class="v-treeview-node__label">
                  Grandchild
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-treeview-node v-treeview-node--leaf">
        <div class="v-treeview-node__root">
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Child
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should react to open changes 4`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should recalculate tree when loading async children using custom key 1`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          One
        </div>
      </div>
    </div>
    <div class="v-treeview-node__children">
      <div class="v-treeview-node v-treeview-node--leaf">
        <div class="v-treeview-node__root">
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Two
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should remove old nodes 1`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node v-treeview-node--leaf">
    <div class="v-treeview-node__root">
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          one
        </div>
      </div>
    </div>
  </div>
  <div class="v-treeview-node v-treeview-node--leaf">
    <div class="v-treeview-node__root">
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          two
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should remove old nodes 2`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node v-treeview-node--leaf">
    <div class="v-treeview-node__root">
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          one
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should remove old nodes 3`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node v-treeview-node--leaf">
    <div class="v-treeview-node__root">
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          one
        </div>
      </div>
    </div>
  </div>
  <div class="v-treeview-node v-treeview-node--leaf">
    <div class="v-treeview-node__root">
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          three
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should render items 1`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should select all descendants 1`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <i aria-hidden="true"
         class="v-icon v-treeview-node__checkbox v-icon--link material-icons theme--light"
         style="font-size: 28px;"
      >
        check_box_outline_blank
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should show expand icon when children is empty and load-children prop used 1`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should update selection when selected prop changes 1`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should update selection when selected prop changes 2`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node v-treeview-node--selected">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
    <div class="v-treeview-node__children">
      <div class="v-treeview-node v-treeview-node--leaf v-treeview-node--selected">
        <div class="v-treeview-node__root">
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Child
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTreeView.ts should update selection when selected prop changes 3`] = `

<div class="v-treeview theme--light">
  <div class="v-treeview-node v-treeview-node--selected">
    <div class="v-treeview-node__root">
      <i aria-hidden="true"
         class="v-icon v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
         style="font-size: 28px;"
      >
        arrow_drop_down
      </i>
      <div class="v-treeview-node__content">
        <div class="v-treeview-node__label">
          Root
        </div>
      </div>
    </div>
    <div class="v-treeview-node__children">
      <div class="v-treeview-node v-treeview-node--leaf v-treeview-node--selected">
        <div class="v-treeview-node__root">
          <div class="v-treeview-node__content">
            <div class="v-treeview-node__label">
              Child
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;
